Fix a regression where the tab-modal signin flow wasn't shown.

https://codereview.chromium.org/1781433002 changed some of the
constrained_window code and updated some callers, but not the tab-modal
signin flow. The modal was being created but not shown.

BUG=593091,217034

Review URL: https://codereview.chromium.org/1815433002

Cr-Commit-Position: refs/heads/master@{#381778}

Former-commit-id: 4588b6b41a9356338c1c2a2eea3bf11fb8647a35